# 3d-sweeper

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: block.ptex  block.ptex.mmcr  block.xcf  block_01.gltf  reference.xcf  sweeper_objects.gltf
examples/: objects.rs  splash.rs
src/: block.rs  camera.rs  game.rs  input.rs  lib.rs  loader.rs  main.rs  main_menu.rs  menu.rs  minefield.rs  settings.rs  texture.rs
src/game/: block.rs  camera.rs  minefield.rs  mod.rs
